k8s/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bernhack
  namespace: bernhack
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - bernhakc-kd.duckdns.org
      secretName: bernhack-tls
  rules:
    - host: bernhakc-kd.duckdns.org
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: back
                port:
                  number: 8000
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: back
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: front
                port:
                  number: 80
